# zyn

./: .editorconfig  BENCH.md  CMP.md  Cargo.toml  DESIGN.md  LANG.md  POST.md  README.md  ROADMAP.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  feature_request.yml  question.yml
.github/workflows/: bench.yml  book.yml  update-issue-template.yml
backlog/: 01-attribute-trait.md  01-attribute.md  02-derive-structs.md  03-derive-enums.md  04-element-integration.md  1-ast.md  2-parser.md  3-expander.md  4-pipes.md  5-entry.md  6-element-macro.md  7-pipe-macro.md  README.md
benches/: RESULTS.md  attr.rs  case.rs  expand.rs
book/: book.toml
book/src/: 00-introduction.md  01-getting-started.md  02-interpolation.md  03-pipes.md  04-control-flow.md  05-elements.md  06-custom-pipes.md  07-case-conversion.md  08-ext.md  SUMMARY.md
book/theme/: book.js  head.hbs  highlight.css  zyn-highlight.js  zyn.css  zyn.highlight.js
crates/core/: BACKLOG.md  Cargo.toml
crates/derive/: Cargo.toml
crates/derive/src/: element.rs  lib.rs  pipe.rs  prettify.rs
crates/derive/src/attribute/: emit.rs  mod.rs
crates/derive/src/attribute/enums/: mod.rs  variant_meta.rs
crates/derive/src/attribute/structs/: field_meta.rs  mod.rs  struct_meta.rs
crates/derive/src/common/: diagnostics.rs  extractors.rs
crates/derive/src/macros/: attribute.rs  debug.rs  derive.rs  element.rs  mod.rs  pipe.rs
crates/ext/: Cargo.toml
crates/zyn-core/: Cargo.toml
crates/zyn-test/: Cargo.toml
crates/zyn-test/src/: assert_diagnostic.rs  assert_tokens.rs  assert_tokens_contain.rs  assert_tokens_empty.rs  lib.rs
crates/zyn-token/: Cargo.toml  README.md
crates/zyn-token/src/: span.rs
crates/zyn-token/src/source/: file.rs  location.rs  map.rs  mod.rs
src/: lib.rs
tests/: case_conversion.rs  element.rs  expand.rs  pipe.rs  pipes.rs  zyn.rs
(+232 files in other folders)
