[package]
name = "zyn-derive"
description = "derive macros for the zyn crate"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
proc-macro = true

[dependencies]
zyn-core = { workspace = true }
