[package]
name = "zyn-ext"
description = "extensions for common syn types"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }