[package]
name = "zyn-token"
description = "Core token primitives for the zyn framework"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
